# git-branch-deleter

./: README.md  main.py  pyproject.toml
src/git_branch_deleter/: __init__.py
