[project]
name = "git-branch-deleter"
version = "1.0.0"
description = "Git branch delete tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[project.scripts]
git-branch-deleter = "git_branch_deleter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

